force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/KimbleOne__ActivityPeriodRateBand__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Activity Period Rate Band</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Period Rate Bands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>