force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/fields/KimbleOne__ActivityTimePattern__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ActivityTimePattern__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity Time Pattern</label>
    <referenceTo>KimbleOne__ActivityTimePattern__c</referenceTo>
    <relationshipLabel>Activity Period Rate Bands</relationshipLabel>
    <relationshipName>ActivityPeriodRateBands</relationshipName>
    <type>Lookup</type>
</CustomField>