force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/fields/KimbleOne__InvoicingCurrencyRevenueRate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyRevenueRate__c</fullName>
    <label>Invoicing Currency Revenue Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>