force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/fields/KimbleOne__PeriodRateBand__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__PeriodRateBand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Rate Band</label>
    <referenceTo>KimbleOne__PeriodRateBand__c</referenceTo>
    <relationshipLabel>Activity Period Rate Bands</relationshipLabel>
    <relationshipName>ActivityPeriodRateBands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>