force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/fields/KimbleOne__RevenueRateRule__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueRateRule__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Revenue Rate Rule</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>RevenueRateRule</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Activity Period Rate Bands (Revenue Rate Rule)</relationshipLabel>
    <relationshipName>ActivityPeriodRateBandsRevenueRateRule</relationshipName>
    <type>Lookup</type>
</CustomField>