force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/fields/KimbleOne__RevenueUnitsCalculationMethod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RevenueUnitsCalculationMethod__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Revenue Units Calculation Method</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>TimeEntryRevenueUnitsCalcMethod</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Activity Period Rate Bands (Revenue Unit Calculation Method)</relationshipLabel>
    <relationshipName>ActivityPeriodRateBandsRevUnits</relationshipName>
    <type>Lookup</type>
</CustomField>