force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/fields/KimbleOne__UsageAllocationType__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__UsageAllocationType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Allows Usage Allocation Type specified at Resourced Activity level to be overridden for a specific Activity Period Rate Band.</description>
    <label>Usage Allocation Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>UsageAllocationType</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Activity Period Rate Bands</relationshipLabel>
    <relationshipName>ActivityPeriodRateBands</relationshipName>
    <type>Lookup</type>
</CustomField>