force-app/main/default/objects/KimbleOne__ActivityPeriodRateBand__c/fields/Time_Type__c.field-meta.xml
<CustomField>
    <fullName>Time_Type__c</fullName>
    <description>Populated from the &quot;Billable?&quot; formula field via workflow. This allows SOQL query reporting, specifically the use of GROUP BY.  Migrated by I. Roemer Sadhana Consulting</description>
    <label>Time Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>